--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Tasks</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../../public/icoCorazon.png">
+    <title>Posts</title>
 </head>
 
 <body>
