--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -18,10 +18,10 @@
                                 <p class="card-text">
                                     <%= post.content %>
                                 </p>
-                                <p class="card-footer">
+                                <!-- <p class="card-footer">
                                     Created At:
                                     <%= post.createdAt %>
-                                </p> 
+                                </p>  -->
                                 <div>
                                     <button class="btn btn-primary" id="btn-edit">Edit</button>
                                     <button type="" class="btn btn-danger" id="btn-delete">Delete</button>
